# gribmanager

./: .gitignore  README.md  __init__.py  geo-env.yml  grib_manager.py  interpolation_in_time_manager.py  parameter_manager.py  parameter_manager_vectorized.py  pyproject.toml
gribmanager/: __init__.py  grib_keys.py  grib_manager.py  interpolation_in_time_manager.py  parameter_interpolation.py  parameter_manager.py  parameter_manager_vectorized.py  utils.py
gribmanager/test/: profile_find_nearest.py  test_grib_manager.py  test_interpolation_in_time_manager.py  test_parameter_manager.py
gribmanager_obsolete/: __init__.py  grib_keys.py  grib_manager.py  interpolation_in_time_manager.py  parameter_manager.py
gribmanager_obsolete/test/: profile_find_nearest.py  test_grib_manager.py  test_interpolation_in_time_manager.py  test_parameter_manager.py
test/: test_gm_memory.py  test_grib_manager.py  test_parameter_manager.py  test_parameter_manager_vectorized.py
tests/: profile_find_nearest.py  test_gm_memory.py  test_grib_manager.py  test_gribmanager.py  test_parameter_manager.py  test_parameter_manager_vectorized.py
