[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Pawel Wolff"}]
name = "gribmanager"
version = "0.2"
dependencies = [
  "numpy >= 1.23.5",
  "pandas >= 1.5.2",
  "xarray >= 2023.6.0",
  "scipy >= 1.5.3",
  "eccodes >= 2.37.0",
]
requires-python = ">= 3.10"
readme = "README.md"
